@@ -1,5 +1,9 @@
 2008-04-08  Vincent Untz  <vuntz@gnome.org>
 
+	* system-timezone.c: (system_timezone_new): minor cleanup
+
+2008-04-08  Vincent Untz  <vuntz@gnome.org>
+
 	Completely rewrite the way we detect the system timezone. It will work
 	on more distributions this way. Also the code is better and it helps
 	improve the world.
